--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Déborah Laport and is
-      <a href="#">open-sourced on Github</a>
+      This project was coded by Déborah Laport, is
+      <a href="https://github.com/DeborahShaenice/world-clock_v2"
+        >open-sourced on Github</a
+      >
+      and hosted on
+      <a href="https://shecodes-world-clocks.netlify.app/">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
