added basic HTML

--- a/index.html
+++ b/index.html
@@ -3,21 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>World Clock</title>
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
-    <h1>World Clock</h1>
-    <footer>
-      This project was coded by Déborah Laport, is
-      <a href="https://github.com/DeborahShaenice/world-clock_v2"
-        >open-sourced on Github</a
-      >
-      and hosted on
-      <a href="https://shecodes-world-clocks.netlify.app/">Netlify</a>
-    </footer>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="">Courbevoie</option>
+        <option value="">Les Abymes</option>
+        <option value="">Dakar</option>
+      </select>
+
+      <div class="city">
+        <h2>Yokohama</h2>
+        <div class="date">June 18th 2024</div>
+        <div class="time">4:27:58 PM</div>
+      </div>
+      <div class="city">
+        <h2>Buenos Aires</h2>
+        <div class="date">June 18th 2024</div>
+        <div class="time">4:27:58 AM</div>
+      </div>
+      <footer>
+        This project was coded by Déborah Laport, is
+        <a href="https://github.com/DeborahShaenice/world-clock_v2"
+          >open-sourced on Github</a
+        >
+        and hosted on
+        <a href="https://shecodes-world-clocks.netlify.app/">Netlify</a>
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
