styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
       </select>
 
       <div class="city">
-        <h2>Yokohama</h2>
-        <div class="date">June 18th 2024</div>
-        <div class="time">4:27:58 PM</div>
+        <div>
+          <h2>Yokohama</h2>
+          <div class="date">June 18th 2024</div>
+        </div>
+        <div class="time">4:27:58 <small>PM</small></div>
       </div>
-      <div class="city">
-        <h2>Buenos Aires</h2>
-        <div class="date">June 18th 2024</div>
-        <div class="time">4:27:58 AM</div>
+        <div>
+          <h2>Buenos Aires</h2>
+          <div class="date">June 18th 2024</div>
+        </div>
+        <div class="time">4:27:58 <small>PM</small></div>
       </div>
       <footer>
-        This project was coded by Déborah Laport, is
+        This project was coded by <strong>Déborah Laport</strong>, is
         <a href="https://github.com/DeborahShaenice/world-clock_v2"
           >open-sourced on Github</a
         >
