change the name of a city

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="time">4:27:58 <small>PM</small></div>
       </div>
         <div>
-          <h2>Buenos Aires</h2>
+          <h2>Miami</h2>
           <div class="date">June 18th 2024</div>
         </div>
         <div class="time">4:27:58 <small>PM</small></div>
