--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         </div>
         <div class="time">4:27:58 <small>PM</small></div>
       </div>
+      <div class="city">
         <div>
-          <h2>Miami</h2>
+          <h2>Buenos Aires</h2>
           <div class="date">June 18th 2024</div>
         </div>
         <div class="time">4:27:58 <small>PM</small></div>
