added single location to javascript

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <option value="">Dakar</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="Tokyo">
         <div>
-          <h2>Yokohama</h2>
-          <div class="date">June 18th 2024</div>
+          <h2>Tokyo</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">4:27:58 <small>PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="BuenosAires">
         <div>
           <h2>Buenos Aires</h2>
-          <div class="date">June 18th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">4:27:58 <small>PM</small></div>
+        <div class="time"></div>
       </div>
       <footer>
         This project was coded by <strong>Déborah Laport</strong>, is
