added functionality for the select

--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city...</option>
-        <option value="">Courbevoie</option>
-        <option value="">Les Abymes</option>
-        <option value="">Dakar</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="America/Guadeloupe">Guadeloupe</option>
+        <option value="Africa/Dakar">Dakar</option>
       </select>
-
-      <div class="city" id="Tokyo">
-        <div>
-          <h2>Tokyo</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="Tokyo">
+          <div>
+            <h2>Tokyo</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="BuenosAires">
-        <div>
-          <h2>Buenos Aires</h2>
-          <div class="date"></div>
+        <div class="city" id="BuenosAires">
+          <div>
+            <h2>Buenos Aires</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
       <footer>
         This project was coded by <strong>Déborah Laport</strong>, is
