added locations to Select

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
       <h1>World Clock</h1>
       <select name="" id="city">
         <option value="">Select a city...</option>
+        <option value="current">My current location</option>
         <option value="Europe/Paris">Paris</option>
         <option value="America/Guadeloupe">Guadeloupe</option>
         <option value="Africa/Dakar">Dakar</option>
+        <option value="Pacific/Auckland">Auckland</option>
+        <option value="Asia/Gaza">Gaza</option>
       </select>
       <div id="cities">
         <div class="city" id="Tokyo">
